name:                genlrparser
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/genlrparser#readme
license:             BSD3
license-file:        LICENSE
author:              Kwanghoon Choi
maintainer:          lazyswamp@gmail.com
copyright:           2017 Kwanghoon Choi
category:            Tool
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src/gentable/ src/parserlib/
  exposed-modules:     Lib, CFG, CmdArgs, ParserTable, GenLRParserTable, SampleGrammar, CodeGenC
                     , TokenInterface, Terminal, CommonParserUtil
  build-depends:       base >= 4.7 && < 5
                     , regex-tdfa
  default-language:    Haskell2010

executable genlrparser-exe
  hs-source-dirs:      app/genlrparser
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , genlrparser
  default-language:    Haskell2010

executable parser-exe
  hs-source-dirs:      app/parser
  main-is:             Main.hs
  other-modules:       Token Lexer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , genlrparser
                     , regex-tdfa
  default-language:    Haskell2010

test-suite genlrparser-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , genlrparser
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kwanghoon/genlrparser
