name:                genlrparser
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kwanghoon/genlrparser#readme
license:             BSD3
license-file:        LICENSE
author:              Kwanghoon Choi
maintainer:          lazyswamp@gmail.com
copyright:           2017 Kwanghoon Choi
category:            Tool
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src/gentable/
  exposed-modules:     CFG, CmdArgs, ParserTable, GenLRParserTable, SampleGrammar, CodeGenC
  hs-source-dirs:      src/parserlib/
  exposed-modules:     TokenInterface, Terminal, CommonParserUtil, SaveProdRules, AutomatonType, LoadAutomaton
  hs-source-dirs:      src/util
  exposed-modules:     ReadGrammar
  build-depends:       base >= 4.7 && < 5
                     , regex-tdfa
                     , hashable
                     , directory
                     , process >= 1.4.3
  default-language:    Haskell2010
  
executable genlrparser-exe
  hs-source-dirs:      app/genlrparser
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , genlrparser
  default-language:    Haskell2010

executable conv-exe
  hs-source-dirs:      app/conv
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , genlrparser
  default-language:    Haskell2010

executable polyrpc-exe
  hs-source-dirs:      app/polyrpc app/polyrpc/ast app/polyrpc/cs
  main-is:             Main.hs
--  other-modules:       Location, Type, Expr, BasicLib, Token, Lexer, Parser, TypeCheck, CSType, CSExpr, Compile
  other-modules:       Location, Type, Expr, BasicLib, Token, Lexer, Parser, TypeCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , regex-tdfa
                     , bytestring
                     , aeson
                     , aeson-pretty
                     , prettyprinter
                     , json
                     , pretty
                     , genlrparser
  default-language:    Haskell2010

executable parser-exe
  hs-source-dirs:      app/parser app/parser/ast 
  main-is:             Main.hs
  other-modules:       Token, Lexer, Expr, Parser
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , regex-tdfa
                     , genlrparser
  default-language:    Haskell2010

test-suite genlrparser-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , genlrparser
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kwanghoon/genlrparser
